Bug 411768 - Line Tool preview is delayed
Summary: Line Tool preview is delayed
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 4.2.5
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-09 19:37 UTC by rittels
Modified: 2021-11-17 14:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rittels 2019-09-09 19:37:47 UTC
SUMMARY
When using the line tool with the "Show Preview" the preview is delayed by a whole second and shown only when pausing.
If "Show Guideline" is checked, the guideline will appear instantly and update live, otherwise nothing whatsoever is shown until you finish the line or pause for a second.

STEPS TO REPRODUCE
1. Activate line tool
2. Make sure "Show Preview" is checked
3. Draw a line

OBSERVED RESULT
Delayed preview, only appears if pausing the line for a whole second.

EXPECTED RESULT
Live, instantaneous preview (as if i were drawing on a ruler).

SOFTWARE/OS VERSIONS
Windows: 10 (x86_64)
ADDITIONAL INFORMATION
Comment 1 Ahab Greybeard 2019-09-11 16:14:11 UTC
I can confirm that this is the case and has been since version 4.1.7.
Comment 2 Bug Janitor Service 2021-10-25 23:36:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1124
Comment 3 Dmitry Kazakov 2021-10-28 05:22:08 UTC
Git commit b9b45e86668dd5d784082bb7efdf337b8ec0d28a by Dmitry Kazakov, on behalf of Reinold Rojas.
Committed on 28/10/2021 at 05:21.
Pushed by dkazakov into branch 'master'.

Decrease wait time to render line tool preview

M  +2    -2    plugins/tools/basictools/kis_tool_line.cc

https://invent.kde.org/graphics/krita/commit/b9b45e86668dd5d784082bb7efdf337b8ec0d28a
Comment 4 Dmitry Kazakov 2021-11-17 14:01:26 UTC
Git commit 13b44311d1355a64dc25a25980dc3a26eaa04852 by Dmitry Kazakov, on behalf of Reinold Rojas.
Committed on 17/11/2021 at 13:47.
Pushed by dkazakov into branch 'krita/5.0'.

Decrease wait time to render line tool preview

M  +2    -2    plugins/tools/basictools/kis_tool_line.cc

https://invent.kde.org/graphics/krita/commit/13b44311d1355a64dc25a25980dc3a26eaa04852