Decrease wait time to render line tool preview

BUG:411768